--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,17 @@
   box-sizing: border-box;
   margin: 0px; }
 
+.info-box {
+  position: sticky;
+  top: 0px;
+  z-index: 1;
+  font-size: 12px;
+  text-align: center;
+  background-color: #f3eae2;
+  color: #747474;
+  padding: 8px; }
+
 .header {
-  position: relative;
   display: flex;
   width: 100%;
   height: 5.7vw;
@@ -27,12 +36,13 @@
   letter-spacing: 3px; }
 
 .logo {
+  display: inline-block;
   height: 5vw;
   margin-left: -12px;
   margin-top: 10px; }
 
 .menu-button {
-  background-color: #000000;
+  background-color: #f3eae2;
   padding: 2vw;
   border: none;
   cursor: pointer;
@@ -52,8 +62,7 @@
   position: absolute;
   left: 65px;
   display: none;
-  font-family: 'Open Sans', sans-serif;
-  border: 1px solid violet; }
+  font-family: 'Open Sans', sans-serif; }
 
 @media screen and (max-width: 660px) {
   .dropdown-menu {
@@ -121,9 +130,10 @@
 .hero-container {
   position: relative;
   width: 100%;
-  height: 500px; }
+  height: 700px; }
 
 .image-container {
+  background-color: #f3eae2;
   height: 100%;
   width: 100%; }
 
@@ -134,15 +144,21 @@
 
 .hero-text {
   position: absolute;
-  top: 40%;
-  left: 8%;
+  text-align: center;
   color: white;
-  background-color: #f3eae2; }
+  font-size: 42px;
+  font-family: 'Playfair Display', serif;
+  top: 280px;
+  left: 430px; }
+
+.hero-text h1, .hero-text h4 {
+  background-color: rgba(243, 234, 226, 0.3); }
 
 .card-container {
   display: flex;
   justify-content: space-between;
-  height: 320px; }
+  height: 320px;
+  margin-top: -5px; }
 
 .startCard {
   position: relative;
@@ -158,16 +174,14 @@
 .right {
   background-image: url(/images/pastellbubblormini.JPG);
   background-size: cover;
-  background-attachment: fixed;
-  background-position: 470px -980px; }
+  background-position: center; }
 
 .card-text {
   position: absolute;
-  left: 3%;
   width: 130px;
-  height: 140px;
-  margin-bottom: 30px;
-  margin-top: 30px;
+  height: 110px;
+  margin-top: 15vh;
+  left: 22px;
   color: white;
   background-color: rgba(243, 234, 226, 0.3); }
 
@@ -180,14 +194,13 @@
   text-align: center; }
 
 .card-text p {
+  position: relative;
   color: white;
-  position: absolute;
-  font-size: 20px;
-  top: -30px;
-  left: -21px;
+  font-size: 15px;
   padding: 10px;
-  background-color: rgba(243, 234, 226, 0.3);
-  writing-mode: vertical-lr; }
+  width: 110px;
+  margin-top: -137px;
+  background-color: rgba(203, 243, 206, 0.3); }
 
 /*---------------FOOTER-------------------*/
 .footer {
@@ -207,9 +220,11 @@
   height: 30px;
   margin: 5px; }
 
-main {
-  background-color: #f3eae2; }
+/* 
 
+main {
+    background-color: $mainColor-linen;
+} */
 .cart-flex {
   display: flex;
   flex-direction: column;
