--- a/sass/login.scss
+++ b/sass/login.scss
@@ -80,3 +80,37 @@
     background-repeat: no-repeat;
     padding-left: 55px;
 }
+
+@media screen and (max-width: 550px) {
+    
+    .modal-content {
+        padding: 8px;
+        width: 90%;
+        font-size: 16px; 
+    }
+    
+    .login-form-field {
+        width: 80%;
+        font-size: 14px;
+        margin-top: 1rem;
+        border-radius: 20px;
+        padding: 1rem;
+    }
+      
+    #login-form-submit {
+        width: 80%;
+        font-size: 14px;
+    }
+      
+    #username-field {
+        background-size: 20px;
+        background-position: 20px 11px;
+        padding-left: 50px; 
+    }
+      
+    #password-field {
+        background-size: 20px;
+        background-position: 20px 11px;
+        padding-left: 50px; 
+    }
+}
