--- a/css/main.css
+++ b/css/main.css
@@ -373,8 +373,7 @@ body {
 .md-title,
 .sm-title {
   font-family: Georgia, "Times New Roman", Times, serif;
-  padding: 0.6rem 0;
-  text-transform: capitalize; }
+  padding: 0.6rem 0; }
 
 .lg-title {
   font-size: 2.5rem;
@@ -679,10 +678,13 @@ body {
 h2 {
   font-size: 2.5vw; }
 
-h4 {
-  font-size: 1vw; }
+p {
+  font-size: 1.1vw; }
 
 .item-name {
+  font-weight: bold; }
+
+.item-price {
   font-weight: bold; }
 
 .totalSumma {
@@ -724,6 +726,29 @@ h4 {
 
 .fa {
   font-size: 2vw; }
+
+@media screen and (max-width: 660px) {
+  .cart-box {
+    width: 100%; }
+  .item-name {
+    font-size: 3vw; }
+  .item-price {
+    font-size: 3vw; }
+  .imgCart {
+    width: 10vw;
+    height: auto; }
+  .totalSumma {
+    font-weight: bold;
+    margin-top: 4vw;
+    font-size: 2.5vw; }
+  h2 {
+    font-size: 3vw; }
+  .fa {
+    font-size: 3.7vw; }
+  .varuCount {
+    font-size: 2vw;
+    width: 2vw;
+    height: 2vw; } }
 
 .sidenav {
   height: 100%;
