--- a/css/main.css
+++ b/css/main.css
@@ -451,6 +451,9 @@ body {
   height: 300px;
   margin: auto; }
 
+.product-img img {
+  object-fit: contain; }
+
 .product-btns {
   display: flex;
   flex-direction: column;
@@ -466,8 +469,8 @@ body {
   transition: all 0.6s ease;
   background: transparent;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 1%;
+  right: 10%;
   cursor: default; }
 
 .btn-cart,
@@ -558,7 +561,13 @@ body {
 @media screen and (min-width: 748px) {
   .product-items {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); }
+    grid-template-columns: repeat(2, 1fr);
+    position: relative; }
+  .product {
+    margin: 2rem;
+    position: relative;
+    display: none;
+    width: 300px; }
   .product-btns {
     display: flex;
     width: 300px; } }
@@ -667,7 +676,7 @@ body {
   .aboutContainer {
     width: 70%;
     padding-bottom: 10%;
-    padding-top: 10%; }
+    padding-top: 5%; }
   .contactSection {
     flex-direction: row;
     width: 100%;
