--- a/sass/productpage.scss
+++ b/sass/productpage.scss
@@ -49,6 +49,7 @@ body {
 }
 
 /* Product section */
+
 .products {
   background-color: $mainColor-linen;
   padding: 3.2rem 0;
@@ -71,6 +72,11 @@ body {
   height: 300px;
   margin: auto;
 }
+
+.product-img img{
+  object-fit: contain;
+}
+
 .product-btns {
   display: flex;
   flex-direction: column;
@@ -86,8 +92,8 @@ body {
   transition: all 0.6s ease;
   background: transparent;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 1%;
+  right: 10%;
   cursor: default;
 }
 .btn-cart,
@@ -180,7 +186,16 @@ body {
   .product-items {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    position: relative;
   }
+
+  .product {
+    margin: 2rem;
+    position: relative;
+    display: none;
+    width: 300px;
+  }
+
 
   .product-btns{
     display: flex;
